# zoro-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: API_DOCS.md  REQUIREMENTS.md  USAGE_EXAMPLES.md
docs/examples/: benchmark.py  quick_test.py
tests/: test_client.py  test_model.py
zoro_client/: __init__.py  api.py  client.py  http_client.py  model.py  service.py
zoro_client/http/: api_client.py
zoro_client/models/: distance.py
