[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "zoro-client"
version = "0.1.1"
description = "A Python client library for Zoro-DB, a vector search engine."
readme = "README.md"
license = { text = "MIT" }

requires-python = ">=3.8"

authors = [
  { name = "Rajath Shettigar", email = "rrshttgr@gmail.com" }
]

keywords = ["vector", "search", "client", "zoro-db", "database"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "requests>=2.32",
  "numpy>=1.23"
]

[project.optional-dependencies]
gui = ["PyQt5>=5.15"]
cli = [
  "rich>=13.0",
  "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/rajathshttgr/zoro-client"
Documentation = "https://github.com/rajathshttgr/zoro-client/blob/main/docs/Documentation.md"
Repository = "https://github.com/rajathshttgr/zoro-client"
"Bug Tracker" = "https://github.com/rajathshttgr/zoro-client/issues"
Changelog = "https://github.com/rajathshttgr/zoro-client/blob/main/docs/CHANGELOG.md"